--- a/bodega/templates/inventory.html
+++ b/bodega/templates/inventory.html
@@ -1,7 +1,9 @@
 {% if prod %}
 <h1>Inventario (Producción)</h1>
+<h2>Mas información en <a href="products">Productos</a> e <a href="ingredients">Ingredientes</a></h2>
 {% else %}
 <h1>Inventario (Develop)</h1>
+<h2>Mas información en <a href="products">Productos</a> e <a href="ingredients">Ingredientes</a></h2>
 {% endif %}
 
 <h1>Stocks de los inventarios</h1>
@@ -16,7 +18,7 @@
 <h1>Aún no hay inventario :(</h1>
 {% endif %}
 
-<h1> Realizar pedidos</h1>
+<h1> Realizar pedidos (Solo de productos 100, que nosotros fabricamos)</h1>
 <p>1001: Arroz granco corto, Multiplos de 10</p>
 <p>1002: Vinage, Multiplos de 10</p>
 <p>1004: Sal, Multiplos de 100</p>
@@ -30,3 +32,23 @@
     {{ form }}
     <input type="submit" value="Pedir">
 </form>
+
+
+
+<h1>Preparar productos (Productos 1000, que necesitan de otros)</h1>
+<p>1101: Arroz cocido, Múltiplos de 10 -> Necesita 1001, 1003, 1004, 1002</p>
+<p>1201: Arroz cocido para roll, Múltiplos de 10 -> Necesita 1101</p>
+<p>1108: Salmón ahumado, múltiplos de 6 -> Necesita 1008</p>
+<p>1109: Atún cortado para roll, múltiplos de 12 -> Necesita 1009</p>
+<p>1110: Palta, múltiplos de 6 -> Necesita 1010</p>
+<p>1210: Palta para roll, múltiplos de 9-> Necesita 1110</p>
+<p>1116: Nori entero, múltiplos de 10 -> Necesita 1016</p>
+<p>10002: California maki masago, múltiplos de 1 -> Necesita 1201, 1105, 1013, 1210,1116</p>
+<form action="preparar" method="post">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="Pedir">
+</form>
+
+
+<h2>Mas información en <a href="products">Productos</a> e <a href="ingredients">Ingredientes</a></h2>
