--- a/bodega/templates/inventory.html
+++ b/bodega/templates/inventory.html
@@ -27,7 +27,7 @@
 <form action="pedir" method="post">
     {% csrf_token %}
     {{ form }}
-    <input type="submit" value="Pedir">
+    <input type="submit" value="Vaciar Recepcion">
 </form>
 
 
