--- a/bodega/templates/inventory.html
+++ b/bodega/templates/inventory.html
@@ -34,11 +34,16 @@
 
 <h1>Preparar productos (Productos 1000, que necesitan de otros)</h1>
 <p>1101: Arroz cocido, Múltiplos de 10 -> Necesita 1001, 1003, 1004, 1002</p>
-<p>1201: Arroz cocido para roll, Múltiplos de 10 -> Necesita 1101</p>
+<p>1201: Camarón cocido, Múltiplos de 10 -> Necesita 1101</p>
+<p>1105: Arroz cocido, Múltiplos de 10 -> Necesita 1005</p>
+<p>1106: Kanikama para roll, Múltiplos de 100 -> Necesita 1006</p>
+<p>1107: Salmón cortado para roll, múltiplos de 11 -> Necesita 1007</p>
 <p>1108: Salmón ahumado, múltiplos de 6 -> Necesita 1008</p>
 <p>1109: Atún cortado para roll, múltiplos de 12 -> Necesita 1009</p>
 <p>1110: Palta, múltiplos de 6 -> Necesita 1010</p>
 <p>1210: Palta para roll, múltiplos de 9-> Necesita 1110</p>
+<p>1111: Sésamo tostado, múltiplos de 2 -> Necesita 1011</p>
+<p>1115: Ciboulette picado para roll, múltiplos de 8 -> Necesita 1015</p>
 <p>1116: Nori entero, múltiplos de 10 -> Necesita 1016</p>
 <p>10002: California maki masago, múltiplos de 1 -> Necesita 1201, 1105, 1013, 1210,1116</p>
 <form action="preparar" method="post">
