added state on ftp view

--- a/bodega/templates/ftp.html
+++ b/bodega/templates/ftp.html
@@ -9,6 +9,7 @@
 <table>
   <tr>
     <th>ID</th>
+    <th>State</th>
     <th>SKU</th>
     <th>Cantidad</th>
     <th>Deadline Date</th>
@@ -18,6 +19,9 @@
   <tr>
     <td>
       {{ k }}
+    </td>
+    <td>
+      {{ v.state }}
     </td>
     <td>
       {{ v.sku }}
